# lab5

./: CMakeLists.txt  README.md  main.cpp
Menu/: RunMenu.cpp  RunMenu.h  menu.cpp  menu.h  option.cpp  option.h
Point/: Point.cpp  Point.h
Rectangle/: Operations.cpp  Operations.h  Rectangle.cpp  Rectangle.h
Repository/: Repository.cpp  Repository.h
Tests/: Tests.cpp  Tests.h
